--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
     <h1>Luna was Here :)</h1>
 	<h1>Andy was also Here</h1>
-	<p>I got no idea what I am doing :) <br>So here is a photo of a bunny :)<br> <img src="bunny.jpg></p>
+	<p>I got no idea what I am doing :) <br>So here is a photo of a bunny :)<br> <img src="bunny.jpg" alt="bunny :)"></p>
 	</body>
 </html>
 
