--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<title>Testing</title>
+		<title>Help</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="nav.css">
 		<link rel="stylesheet" type="text/css" href="body.css">
