--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<![endif]-->
 	</head>
 	<body>
-    <h1>Luna was Here :)</h1>
-	<h1><span>Dennis Kerney likes pink <3<3</span></h1>
+	<h1><span>Jacob say I'm more random than a cat... WHat does that make me? I guess my friend was right.. I might just be a gold fish name goldie</span></h1>
 	<h1>Andy was also Here</h1>
 	<p>I got no idea what I am doing :) <br>So here is a photo of a bunny :)<br> <img src="bunny.jpg" alt="bunny :)"></p>
 	</body>
