--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
         <head>
-                <title>Texting</title>
+                <title>MIKI</title>
                 <meta charset="UTF-8" />
                 <link rel="stylesheet" type="text/css" href="body.css">
                 <link rel="stylesheet" type="text/css" href="nav.css">
@@ -17,7 +17,7 @@
         </head>
         <body>
                 <!-- HEADER AREA -->
-                <header><h1>~This is a Test~</br>No need to Worry about the bad website.</h1></header>
+                <header><h1>~Header Yup~</h1></header>
                 <!-- NAVIGATION AREA -->
                 <ul>
                         <li>
@@ -32,11 +32,11 @@
                 </ul>
                 <!-- Stuff -->
                 <div>
-                        <h2>Welcome to Testing area~<3</h2>
+                        <h2>About Page~<3</h2>
                         <p>I am a cat lover and this is my little world on the internet.</p>
                         <h3>Enjoy your stay~<3</h3>
                 </div>
                 <!-- FOOTER AREA -->
-                <footer><p>~Some footing here.~</p></footer>
+                <footer><p>~Footer for this page.~</p></footer>
         </body>
 </html>
